# motiff

./: Cargo.toml  LICENSE  README.md  mbl_seqs.fa
src/: gibbs.rs
