[package]
name = "rust_implementation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "1.5.0"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
rand = "0.8.5"
scc = "2.0.16"

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3
